[project]
name = "raspberry-llm-explorer"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Patryk Bartkowiak", email = "patrykbart99@gmail.com"},
]
dependencies = ["flask>=3.1.0", "requests>=2.32.3", "ollama>=0.4.7", "waitress>=3.0.2", "opencv-python>=4.11.0.86", "picamera2>=0.3.25", "picamzero>=1.0.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
